bynkc/tests/fixtures/negative/406_match_refined_no_wildcard_non_exhaustive/input.bynk
commons demo {
  fn f(x: Int) -> String {
    match x {
      _ where InRange(1, 10) => "low"
      _ where InRange(11, 20) => "high"
    }
  }
}
